update index.html dan style.css

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm an Informatics graduate from Sanata Dharma University, Yogyakarta,
-        with interests in data mining, analytics, machine learning, and
-        front-end development. I enjoy working with data to build models and
-        solve problems while also creating interactive, user-friendly
-        interfaces. This lets me combine both the analytical side of data and
-        the creative side of web development. My goal is to grow as a
-        professional who contributes to data-driven solutions and builds
-        engaging front-end experiences.
+        I’m an Informatics graduate from Sanata Dharma University, Yogyakarta,
+        passionate about data analytics, machine learning, and software
+        development. I enjoy turning raw data into insights through models and
+        problem-solving, while also building practical and user-friendly
+        software applications. This combination allows me to merge analytical
+        thinking with creativity in technology. My goal is to keep growing as a
+        professional, delivering data-driven solutions and impactful software
+        systems.
       </p>
     </section>
 
