Update index.html, script.js, and style.css for responsive fixes

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <p>LinkedIn: <a href="#">www.linkedin.com/in/loadtriani-oktavia</a></p>
       <p>Github: <a href="#">https://github.com/loadtriani</a></p>
     </section>
-
+    <button id="scrollTopBtn" title="Kembali ke atas">↑</button>
     <footer>
       <p>© 2025 Load. All rights reserved.</p>
     </footer>
