Update index.html, and style.css for responsive fixes mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I’m an Informatics graduate from Sanata Dharma University, Yogyakarta,
+        I'm an Informatics graduate from Sanata Dharma University, Yogyakarta,
         passionate about data analytics, machine learning, and software
         development. I enjoy turning raw data into insights through models and
         problem-solving, while also building practical and user-friendly
