--- a/index.html
+++ b/index.html
@@ -216,6 +216,17 @@
               concert based on popularity, cost, and location.
             </p>
           </div>
+          <div class="project-item">
+            <h4>
+              Software Project Management Plan for a Car Rental Application
+            </h4>
+            <p>
+              Planned and coordinated the development of a car rental application by 
+              organizing workflows, managing resources, and ensuring effective 
+              communication to achieve project targets within the defined timeframe 
+              and budget.
+            </p>
+          </div>
         </div>
         <!-- Card Machine Learning -->
         <div class="project-card toggle-card" data-target="machineL">
